Ajustes botoes de ordenacao e novos campos peso e dias em estoque nos produtos

--- a/html/templates/lista_envio_brasil.html
+++ b/html/templates/lista_envio_brasil.html
@@ -63,27 +63,27 @@
                 <tr>
                   <th>
 
-                    <a title="Ordenar pelo ID" href="#">ID <i class="fa fa-fw fa-sort-amount-asc"></i></a>
+                    <a title="Ordenar pelo ID" href="javascript:void(0);">ID <i class="fa fa-fw fa-sort-amount-asc"></i></a>
                   </th>
 
                   <!-- somente admin visualiza -->
                   <th class="center">
 
-                    <a title="Ordenar pelo usuário" href="#">Usuário <i class="fa fa-fw fa-sort-amount-asc"></i></a>
+                    <a title="Ordenar pelo usuário" href="javascript:void(0);">Usuário <i class="fa fa-fw fa-sort-amount-asc"></i></a>
                   </th>
                   <!-- fim campo -->
 
                   <th>
 
-                    <a title="Ordenar pela data de envio" href="#">Data de Envio <i class="fa fa-fw fa-sort-amount-asc"></i></a>
+                    <a title="Ordenar pela data de envio" href="javascript:void(0);">Data de Envio <i class="fa fa-fw fa-sort-amount-asc"></i></a>
                   </th>
                   <th class="center">
 
-                    <a title="Ordenar pela quantidade" href="#">Quantidade <i class="fa fa-fw fa-sort-amount-asc"></i></a>
+                    <a title="Ordenar pela quantidade" href="javascript:void(0);">Quantidade <i class="fa fa-fw fa-sort-amount-asc"></i></a>
                   </th>
                   <th class="center">
 
-                    <a title="Ordenar pelo status" href="#">Status <i class="fa fa-fw fa-sort-amount-asc"></i></a>
+                    <a title="Ordenar pelo status" href="javascript:void(0);">Status <i class="fa fa-fw fa-sort-amount-asc"></i></a>
                   </th>
                   <th class="center">Ações</th>
                 </tr>
@@ -113,8 +113,8 @@
 
                   <li class="active"><span>1 <span class="sr-only">(current)</span></span></li>
 
-                  <li><a href="#" class="pagination-page" data-page="2">2</a></li>
-                  <li><a href="#" class="pagination-page" data-page="2">»</a></li>
+                  <li><a href="javascript:void(0);" class="pagination-page" data-page="2">2</a></li>
+                  <li><a href="javascript:void(0);" class="pagination-page" data-page="2">»</a></li>
                </ul>
           </nav>
         </div>
