--- a/html/templates/product_stock.html
+++ b/html/templates/product_stock.html
@@ -87,28 +87,28 @@
                 <tr>
                   <th>
                       {% trans "Ordenar pelo ID" as order_id %}
-                      <a title="{{ order_id }}" href="#">{{ id }} <i class="fa fa-fw fa-sort-amount-asc"></i></a>
+                      <a title="{{ order_id }}" href="javascript:void(0);">{{ id }} <i class="fa fa-fw fa-sort-amount-asc"></i></a>
                   </th>
                   <th>
                       {% trans "Ordenar pelo nome" as order_name %}
-                      <a title="{{ order_name }}" href="#">{{ name }} <i class="fa fa-fw fa-sort-amount-asc"></i></a>
+                      <a title="{{ order_name }}" href="javascript:void(0);">{{ name }} <i class="fa fa-fw fa-sort-amount-asc"></i></a>
                   </th>
                   <th>{% trans "Data de Envio" %}</th>
                   <th class="center">
                       {% trans "Ordenar pela quantidade" as order_qty %}
-                      <a title="{{ order_qty }}" href="#">{% trans "Quantidade" %} <i class="fa fa-fw fa-sort-amount-asc"></i></a>
+                      <a title="{{ order_qty }}" href="javascript:void(0);">{% trans "Quantidade" %} <i class="fa fa-fw fa-sort-amount-asc"></i></a>
                   </th>
                   {% if user|has_user_perm:'view_users' %}
                   <!-- somente admin visualiza -->
                   <th class="center">
                       {% trans "Ordenar pelo usuário" as order_user %}
-                      <a title="{{ order_user }}" href="#">{{ user_label }} <i class="fa fa-fw fa-sort-amount-asc"></i></a>
+                      <a title="{{ order_user }}" href="javascript:void(0);">{{ user_label }} <i class="fa fa-fw fa-sort-amount-asc"></i></a>
                   </th>
                   <!-- fim campo -->
                   {% endif %}
                   <th class="center">
                       {% trans "Ordenar pelo status" as order_status %}
-                      <a title="{{ order_status }}" href="#">{% trans "Status" %} <i class="fa fa-fw fa-sort-amount-asc"></i></a>
+                      <a title="{{ order_status }}" href="javascript:void(0);">{% trans "Status" %} <i class="fa fa-fw fa-sort-amount-asc"></i></a>
                   </th>
                   {% if user|has_shipment_perm:'add_shipment' %}
                   <th class="center">{% trans "Envio" %}</th>
@@ -192,7 +192,7 @@
             {% if products.has_other_pages %}
               <ul class="pagination">
                 {% if products.has_previous %}
-                  <li><a href="#" class="pagination-page" data-page="{{ products.previous_page_number }}">&laquo;</a></li>
+                  <li><a href="javascript:void(0);" class="pagination-page" data-page="{{ products.previous_page_number }}">&laquo;</a></li>
                 {% else %}
                   <li class="disabled"><span>&laquo;</span></li>
                 {% endif %}
@@ -200,11 +200,11 @@
                   {% if products.number == i %}
                     <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
                   {% else %}
-                    <li><a href="#" class="pagination-page" data-page="{{ i }}">{{ i }}</a></li>
+                    <li><a href="javascript:void(0);" class="pagination-page" data-page="{{ i }}">{{ i }}</a></li>
                   {% endif %}
                 {% endfor %}
                 {% if products.has_next %}
-                  <li><a href="#" class="pagination-page" data-page="{{ products.next_page_number }}">&raquo;</a></li>
+                  <li><a href="javascript:void(0);" class="pagination-page" data-page="{{ products.next_page_number }}">&raquo;</a></li>
                 {% else %}
                   <li class="disabled"><span>&raquo;</span></li>
                 {% endif %}
