--- a/html/templates/store_purchase.html
+++ b/html/templates/store_purchase.html
@@ -59,7 +59,7 @@
                   <td class="center">21</td>
                   <td class="center">Concluído</td>
                   <td class="center">
-                      <a class=" download" href="/lote/detalhe"><i class="fa fa-pencil"></i> Detalhe</a>
+                      <a class="download" href="/lote/detalhe"><i class="fa fa-pencil"></i> Detalhe</a>
                   </td>
                 </tr>
 
@@ -70,7 +70,7 @@
                   <td class="center">5</td>
                   <td class="center">Aguardando pagamento</td>
                   <td class="center">
-                      <a class=" download" href="/lote/detalhe"><i class="fa fa-pencil"></i> Detalhe</a>
+                      <a class="download" href="/lote/detalhe"><i class="fa fa-pencil"></i> Detalhe</a>
                   </td>
                 </tr>
 
@@ -83,12 +83,12 @@
           </div>
           <nav aria-label="...">
               <ul class="pagination">
-                <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
-                <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-                <li class=""><a href="#">2</a></li>
-                <li class=""><a href="#">3</a></li>
-                <li class=""><a href="#">4</a></li>
-                <li><a href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
+                <li class="disabled"><a href="javascript:void(0);" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+                <li class="active"><a href="javascript:void(0);">1 <span class="sr-only">(current)</span></a></li>
+                <li class=""><a href="javascript:void(0);">2</a></li>
+                <li class=""><a href="javascript:void(0);">3</a></li>
+                <li class=""><a href="javascript:void(0);">4</a></li>
+                <li><a href="javascript:void(0);" aria-label="Next"><span aria-hidden="true">»</span></a></li>
               </ul>
             </nav>
         </div>
