arquivar envio e cron para arquivar os envios finalizados mensalmente.

--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -142,7 +142,7 @@
                         </ul>
                     </li>
                     {% endif %}
-
+{% comment %}
                     <!-- Menu envio Brasil-->
 
                     <li class="dropdown ">
@@ -157,7 +157,7 @@
                             </li>
                         </ul>
                     </li>
-
+{% endcomment %}
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><span class="glyphicon glyphicon-cog "></span>  {% trans "Olá" %}, {{ user.first_name }} <b class="caret"></b></a>
                         <ul class="dropdown-menu">
