--- a/html/templates/product_add_edit.html
+++ b/html/templates/product_add_edit.html
@@ -52,7 +52,7 @@
                   {% endfor %}
                 </div><br>
               {% endif %}
-
+{% comment %}
               <!-- Campo novo Peso -->
 
               <div class="form-group col-md-12">
@@ -61,7 +61,7 @@
               </div><br>
 
               <!-- fim campo novo -->
-
+{% endcomment %}
 
                 <div class="form-group col-md-12">
                   <label for="{{ form.send_date.id_for_label }}">{{ form.send_date.label }}*</label>
