--- a/html/templates/shipment_details.html
+++ b/html/templates/shipment_details.html
@@ -17,7 +17,7 @@
 
         </div>
         <div class="col-md-10 main">
-          <h1 class="page-header"><i class="fa fa-archive"></i> {% trans "Envio" %} {{ shipment.id }}</h1>
+          <h1 class="page-header"><i class="fa fa-archive"></i> {% trans "Envio" %} {{ shipment.id }}{% if shipment.is_archived %} ({% trans "Arquivado" %}){% endif %}</h1>
           <div class="table-responsive">
             <table class="table table-striped">
               <thead>
@@ -291,13 +291,19 @@
               </form>
            </div><hr />
            {% endif %}
-           {% if shipment.status == 2 %}
+           {% if shipment.status == 2 and shipment.is_archived is False %}
             {% if user == shipment.user or user|has_group:'admins' %}
              {{ paypal_form.render }}
              <br><br>
             {% endif %}
            {% endif %}
              <div class="row">
+                 {% if shipment.is_archived %}
+                 <!-- Botao arquivar -->
+                 <a class="btn btn-primary filtar-btn alterar-status" id="archive-btn" href="#">
+                    <i class="fa fa-fw fa-edit"></i> {% trans "Reativar Envio" %}
+                 </a>
+                 {% else %}
                 {% if shipment.status == 4 and user|has_group:'admins' %}
                 <a class="btn btn-primary filtar-btn alterar-status" id="send-btn-final" href="#">
                     <i class="fa fa-fw fa-paper-plane"></i> {% trans "Enviar e Finalizar Envio" %}
@@ -326,12 +332,16 @@
                 <br><br>
                  {% endif %}
                 {% endif %}
-
-
                  <!-- Botao arquivar -->
-                    <!--<a class="btn btn-danger filtar-btn alterar-status" id="archive-btn" href="#">-->
-                        <!--<i class="fa fa-fw fa-archive"></i> {% trans "Arquivar Envio" %}-->
-                    <!--</a>-->
+                 <a class="btn btn-danger filtar-btn alterar-status" id="archive-btn" href="#">
+                    <i class="fa fa-fw fa-archive"></i> {% trans "Arquivar Envio" %}
+                 </a>
+                 {% endif %}
+                 <br><br>
+                 <form action="{% url 'shipment_archive' shipment.id %}" method="post" id="form-archive-shipment">
+                    {% csrf_token %}
+                    <input type="hidden" name="archive_shipment" value="1">
+                 </form>
                  <!-- botao arquivar -->
 
                 <a href="javascript:history.back()"><i class="fa fa-fw fa-long-arrow-left"></i> {% trans "Voltar" %}</a>
