--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -1079,6 +1079,17 @@ label.titulo-pct span{
     margin: 0 auto;
 }
 
+#ajuda{
+    margin: 100px auto;
+    width: 70%;
+}
+
+#ajuda .nav-tabs > li.active > a, #ajuda .nav-tabs > li.active > a:focus, #ajuda .nav-tabs > li.active > a:hover{
+    color: #3C3E77;
+    font-weight: bold;
+    font-size: 18px;
+}
+
 /*balão*/
 .status{
     background: #ddd;
