Ajustes tutorial plataforma

--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -100,7 +100,7 @@
                     </li>
 {% endcomment %}
                     <li class="tutorial">
-                        <a href="#" class="abre-tutorial"><i class="fa fa-leanpub"></i> {% trans "Tutorial Plataforma" %}</a>
+                        <a href="https://vendedorinternacional.net/ajuda.html" target="_blank" class="abre-tutorial"><i class="fa fa-leanpub"></i> {% trans "Tutorial Plataforma" %}</a>
                     </li>
                     {% if user|has_product_perm:'view_products' or user|has_product_perm:'add_product' %}
                     <li class="dropdown">
@@ -218,7 +218,7 @@
             </div>
         </div>
     </div>
-
+    <!--
     <div id="tutorial" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -248,7 +248,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
     <!-- Loading basta dar display block-->
     <div class="loading" style="display: none;">{% trans "Carregando" %}...</div>
