--- a/html/templates/product_add_edit.html
+++ b/html/templates/product_add_edit.html
@@ -102,6 +102,29 @@
                     <br>
                   </div>
                 {% endfor %}
+
+                <!-- Novos campos -->
+
+                <div class="form-group col-md-12"><br><br>
+                  <label for="DataValidade">Data de validade*</label>
+                  <input class="form-control menor datepicker DataValidade hasDatepicker" id="DataValidade" name="DataValidade" placeholder="Data de validade..." value="15/05/2017" aria-required="true" type="text">
+                </div>
+                <div class="form-group col-md-6"><br>
+                  <label for="condProduto">Condição do(s) produto(s)</label>
+                  <select class="form-control" id="condProduto" name="condProduto">
+                    <option>New</option>
+                    <option>Refurbished</option>
+                    <option>Used Like New</option>
+                    <option>Used Very good</option>
+                    <option>Used good</option>
+                    <option>Used Acceptable</option>
+                  </select>
+                </div>
+                <div class="form-group col-md-12"><br>
+                  <label for="descCondicoes">Descrição Condição do(s) produto(s)</label>
+                  <textarea class="form-control" id="descCondicoes" name="descCondicoes" placeholder="Descrição Condição do(s) produto(s)..."></textarea>
+                </div>
+
               </div>
               <div class="col-md-12"><br>
                 <a class="add-track btn btn-success {{ tracking_formset.prefix }}-add-row add-row" title="{{ tracking_formset.addText }}" href="javascript:void(0);"><i class="fa fa-fw fa-plus"></i>{{ tracking_formset.addText }}</a>
