--- a/html/templates/product_details.html
+++ b/html/templates/product_details.html
@@ -77,6 +77,30 @@
                         {% endfor %}
                     </div>
                 </div>
+
+              <div class="form-group">
+                <label class="control-label col-xs-3">{% trans "Data Vencimento" %}:</label>
+                <div class="col-xs-9">
+                    <p>27 de Dezembro de 2019​</p>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label class="control-label col-xs-3">{% trans "Condição do(s) produto(s)" %}:</label>
+                <div class="col-xs-9">
+                    <p>Used Very good</p>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label class="control-label col-xs-3">{% trans "Descrição Condição do(s) produto(s)" %}:</label>
+                <div class="col-xs-9">
+                    <p>Produtos avariados na parte inferior.​</p>
+                </div>
+              </div>
+
+
+
               {% if user|has_product_perm:'change_product' %}
               <a href="{% url 'product_edit' product.id %}" class="btn btn-primary"><i class="fa fa-fw fa-pencil"></i> {% trans "Editar" %}</a>
               {% endif %}
