--- a/html/templates/shipment_add.html
+++ b/html/templates/shipment_add.html
@@ -54,6 +54,7 @@
                   <th>{% trans "ID" %}</th>
                   <th>{% trans "Nome" %}</th>
                   <th>{% trans "Descrição" %}</th>
+                  <th>{% trans "Vencimento" %}</th>
                   <th class="center">{% trans "Quantidade" %}</th>
                   {% if user|has_shipment_perm:'delete_product' %}
                   <th>{% trans "Retirar" %}</th>
