--- a/html/templates/shipment_details.html
+++ b/html/templates/shipment_details.html
@@ -25,6 +25,7 @@
                   <th>{% trans "ID" %}</th>
                   <th>{% trans "Nome" %}</th>
                   <th>{% trans "Descrição" %}</th>
+                  <th>{% trans "Vencimento" %}</th>
                   <th class="center">{% trans "Quantidade" %}</th>
                   {% if user|has_user_perm:'view_users' %}
                   <th>{% trans "Usuário" %}</th>
@@ -40,6 +41,9 @@
                   <td>{{ product.product.id }}</td>
                   <td>{{ product.product.name }}</td>
                   <td>{{ product.product.description }}</td>
+
+                  <td>27 de dezembro de 2017</td>
+
                   <td class="center">{{ product.quantity }}</td>
                   {% if user|has_user_perm:'view_users' %}
                   <td>{{ shipment.user.first_name }}</td>
